--- a/css/board.css
+++ b/css/board.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 15%;
+  margin-top: 10px;
   justify-content: center;
   align-items: center;
 }
