--- a/css/parachute-man.css
+++ b/css/parachute-man.css
@@ -19,31 +19,36 @@
   margin: auto;
   justify-content: center;
   align-items: center;
-  grid-template-rows: repeat(6, 1fr);
 }
 
 .parachute-row {
   text-align: center;
-  display: grid;
-  grid-template-rows: repeat(5, 1fr);
-  grid-gap: 5px;
-  border: black 2px;
+  height: 200px;
 }
 
-parachute-tile {
+parachute-img {
+  position: fixed;
+  top: 150px;
+  right: 50%;
+  left: 50%;
   display: flex;
-  width: 60px;
-  height: 60px;
-  border: 2px grey dotted;
-  margin-top: 2.5px;
-  margin-bottom: 2.5px;
+  height: fit-content;
   align-items: center;
   justify-content: center;
   font-size: x-large;
-  z-index: 2;
   /* color: white; */
 }
 
 .cover {
   background-color: white;
+}
+
+.hide {
+  visibility: hidden;
+  z-index: -1;
+}
+
+.show {
+  visibility: visible;
+  z-index: 10;
 }
